<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="351dp"
        android:layout_height="268dp"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_weight="1"
        android:contentDescription="@string/todo"
        android:paddingLeft="5dp"
        android:paddingBottom="5dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/recipeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recipeText"
        android:layout_width="351dp"
        android:layout_height="83dp"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_weight="1"
        android:padding="5dp"
        android:singleLine="false"
        android:text="@string/textview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</android.support.constraint.ConstraintLayout>